initSearch TSOA
